--- a/main.css
+++ b/main.css
@@ -31,7 +31,7 @@ section {
   display: flex;
   width: 100%;
   height: 100%;
-  background-image: url(../img/homeBg.jpg);
+  background-image: url(img/homeBg.jpg);
   background-repeat: no-repeat;
   background-size: cover;
 }
